Fix StyledLabel so it doesn't clip the bottom of Hindi text.

A label can be taller than the calculated line height, so set the height
according to the bottom of the lowest label (link) as we iterate through
StyledLabel sub-views.

Also, somewhat tangentially, reduce the amount of nesting
in BubbleSyncPromoView by making it a StyledLabel rather
than a view containing a single StyledLabel.

BUG=618978

Review-Url: https://codereview.chromium.org/2072513003
Cr-Commit-Position: refs/heads/master@{#400833}

Former-commit-id: 85882eb4e66d924e623be4246894d96d7344fce8